--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/material": "^5.13.3",
+    "@material-ui/icons": "latest",
+    "@mui/material": "latest",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
